@@ -1,6 +1,12 @@
 2006-04-07  Dai Sato  <satodai@w3m.jp>
 
 	* [w3m-dev-en 01060] Some patches
+	* file.c, fm.h, rc.c: Introduce option show_cookie and set it TRUE by default. If set to FALSE received cookies will not be shown.
+	* This fixes Debian bug #253547: w3m: Too slow receiving cookies.
+
+2006-04-07  Dai Sato  <satodai@w3m.jp>
+
+	* [w3m-dev-en 01060] Some patches
 	* parsetagx.c: Replace '\n' (newline) with ' ' (space) in attributes of html tags instead of ignoring them.
 	* Fixes Debian bug #326167: w3m: new lines in hidden form fields are stripped
 
@@ -8677,4 +8683,4 @@ a	* [w3m-dev 03276] compile error on EWS4800
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.954 2006/04/07 15:38:42 inu Exp $
+$Id: ChangeLog,v 1.955 2006/04/07 15:48:56 inu Exp $
